# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/aafwk/standard/aafwk.gni")

dataobsms_files = [
  "src/dataobs_mgr_inner.cpp",
  "src/dataobs_mgr_proxy.cpp",
  "src/dataobs_mgr_stub.cpp",
  "src/dataobs_mgr_service.cpp",
  "src/data_ability_observer_proxy.cpp",
]
