# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("formmgr_config") {
  include_dirs = [
    "include",
    "//third_party/json/include",

    #    "//base/miscservices/time/interfaces/innerkits/include",
  ]
}

group("fms_target") {
  deps = [ ":libfms" ]
}

ohos_shared_library("libfms") {
  cflags_cc = []
  include_dirs = [
    "${services_path}/common:perm_verification",
    "${aafwk_path}/services/common/include",
    "${appexecfwk_path}/common/log/include",
    "${kits_path}/appkit/native/ability_runtime",
  ]
  sources = [
    "src/form_ability_connection.cpp",
    "src/form_acquire_connection.cpp",
    "src/form_acquire_state_connection.cpp",
    "src/form_ams_helper.cpp",
    "src/form_batch_delete_connection.cpp",
    "src/form_bms_helper.cpp",
    "src/form_cache_mgr.cpp",
    "src/form_cast_temp_connection.cpp",
    "src/form_data_mgr.cpp",
    "src/form_db_cache.cpp",
    "src/form_db_info.cpp",
    "src/form_delete_connection.cpp",
    "src/form_dump_mgr.cpp",
    "src/form_event_notify_connection.cpp",
    "src/form_host_callback.cpp",
    "src/form_host_record.cpp",
    "src/form_info_mgr.cpp",
    "src/form_info_storage.cpp",
    "src/form_info_storage_mgr.cpp",
    "src/form_item_info.cpp",
    "src/form_mgr_adapter.cpp",
    "src/form_mgr_service.cpp",
    "src/form_msg_event_connection.cpp",
    "src/form_provider_mgr.cpp",
    "src/form_refresh_connection.cpp",
    "src/form_refresh_limiter.cpp",
    "src/form_storage_mgr.cpp",
    "src/form_supply_callback.cpp",
    "src/form_sys_event_receiver.cpp",
    "src/form_task_mgr.cpp",
    "src/form_timer_mgr.cpp",
    "src/form_util.cpp",
    "src/kvstore_death_recipient_callback.cpp",
  ]

  defines = [
    "AMS_LOG_TAG = \"FormMgrService\"",
    "AMS_LOG_DOMAIN = 0xD001120",
  ]

  configs = [
    ":formmgr_config",
    "${aafwk_path}/interfaces/innerkits/form_manager:formmgr_sdk_config",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "${kits_path}/appkit:app_context",
    "${services_path}/common:perm_verification",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "device_usage_statistics:usagestatsinner",
    "distributeddatamgr:distributeddata_inner",
    "eventhandler:libeventhandler",
    "form_runtime:form_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "power_manager_native:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "time_native:time_service",
    "utils_base:utils",
  ]

  if (os_account_part_enabled) {
    cflags_cc += [ "-DOS_ACCOUNT_PART_ENABLED" ]
    external_deps += [
      "os_account_standard:libaccountkits",
      "os_account_standard:os_account_innerkits",
    ]
  }

  subsystem_name = "aafwk"
  part_name = "form_runtime"
}
