# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("tools_fm_config") {
  include_dirs = [
    "${aafwk_path}/interfaces/innerkits/want/include",
    "${aafwk_path}/interfaces/innerkits/base/include",
    "${aafwk_path}/services/common/include",
    "${aafwk_path}/tools/aa/include",
    "${aafwk_path}/services/common/include",
    "${appexecfwk_path}/common/log/include",
    "${appexecfwk_path}/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "include",
  ]
}

ohos_source_set("tools_fm_source_set") {
  sources = [
    "${aafwk_path}/tools/aa/src/shell_command.cpp",
    "src/fms_command.cpp",
    "src/main.cpp",
  ]

  defines = [
    "AMS_LOG_TAG = \"FmsTool\"",
    "AMS_LOG_DOMAIN = 0xD001152",
  ]

  public_configs = [ ":tools_fm_config" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [ "${appexecfwk_path}/common:libappexecfwk_common" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "form_runtime:form_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "aafwk"
  part_name = "ability_tools"
}

ohos_executable("fm") {
  deps = [ ":tools_fm_source_set" ]

  install_enable = true

  subsystem_name = "aafwk"
  part_name = "ability_tools"
}

group("tools_fm") {
  deps = [ ":fm" ]
}
